--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tanstack/react-query": "^5.67.2",
     "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.36.1",
